agregue un comando nav

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Pagina web 2</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <nav></nav>
+    </header>
     <main>
         <section></section>
         <section></section>
