--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
         <nav></nav>
     </header>
     <main>
-        <section></section>
+        <section>
+            <img src="img/drakeimage.jpg" alt="">
+        </section>
         <section></section>
     </main>
     <footer></footer>
